alignment fixed

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -57,7 +57,7 @@ body{
     height: 130px;
     margin-bottom: 40px;
     font-size: 15px;
-    padding: 15px;
+    padding: 22px;
     color: white;
 }
 .box ul{
